--- a/pure-module/pom.xml
+++ b/pure-module/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modules>
         <module>pure-system</module>
+        <module>pure-demo</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
