--- a/pure-common/pom.xml
+++ b/pure-common/pom.xml
@@ -22,5 +22,6 @@
         <module>pure-common-core</module>
         <module>pure-common-doc</module>
         <module>pure-common-web</module>
+        <module>pure-common-mybatis</module>
     </modules>
 </project>
