--- a/pure-common/pure-common-bom/pom.xml
+++ b/pure-common/pure-common-bom/pom.xml
@@ -34,6 +34,12 @@
                 <artifactId>pure-common-doc</artifactId>
                 <version>${revision}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.xie</groupId>
+                <artifactId>pure-common-mybatis</artifactId>
+                <version>${revision}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
