--- a/pure-common/pure-common-mybatis/pom.xml
+++ b/pure-common/pure-common-mybatis/pom.xml
@@ -4,36 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.xie</groupId>
-        <artifactId>pure-module</artifactId>
+        <artifactId>pure-common</artifactId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>pure-common-mybatis</artifactId>
 
-    <artifactId>pure-system</artifactId>
+
 
     <description>
-        system系统模块
+        pure-common-mybatis 数据库服务
     </description>
 
+
     <dependencies>
-        <!-- 通用工具-->
         <dependency>
             <groupId>com.xie</groupId>
             <artifactId>pure-common-core</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>com.xie</groupId>
-            <artifactId>pure-common-doc</artifactId>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.xie</groupId>
-            <artifactId>pure-common-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.xie</groupId>
-            <artifactId>pure-common-mybatis</artifactId>
-        </dependency>
-
     </dependencies>
 </project>
