--- a/pure-module/pure-demo/pom.xml
+++ b/pure-module/pure-demo/pom.xml
@@ -8,12 +8,13 @@
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>pure-demo</artifactId>
 
-    <artifactId>pure-system</artifactId>
 
     <description>
-        system系统模块
+        demo模块
     </description>
+
 
     <dependencies>
         <!-- 通用工具-->
@@ -26,6 +27,7 @@
             <groupId>com.xie</groupId>
             <artifactId>pure-common-doc</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.xie</groupId>
             <artifactId>pure-common-web</artifactId>
