--- a/pure-module/pure-system/pom.xml
+++ b/pure-module/pure-system/pom.xml
@@ -35,5 +35,9 @@
             <artifactId>pure-common-mybatis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.xie</groupId>
+            <artifactId>pure-common-security</artifactId>
+        </dependency>
     </dependencies>
 </project>
