--- a/pure-admin/src/main/resources/application-dev.yml
+++ b/pure-admin/src/main/resources/application-dev.yml
@@ -1,9 +1,26 @@
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/pure
+    type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:postgresql://localhost:5432/pure?useUnicode=true&characterEncoding=utf8&useSSL=true&autoReconnect=true&reWriteBatchedInserts=true
     username: postgres
     password: 123456
     driver-class-name: org.postgresql.Driver
     initialize: true
-    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      # 最大连接池数量
+      maxPoolSize: 20
+      # 最小空闲线程数量
+      minIdle: 10
+      # 配置获取连接等待超时的时间
+      connectionTimeout: 30000
+      # 校验超时时间
+      validationTimeout: 5000
+      # 空闲连接存活最大时间，默认10分钟
+      idleTimeout: 600000
+      # 此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认30分钟
+      maxLifetime: 1800000
+      # 连接测试query（配置检测连接是否有效）
+      connectionTestQuery: SELECT 1
+      # 多久检查一次连接的活性
+      keepaliveTime: 30000
