--- a/pure-common/pure-common-web/pom.xml
+++ b/pure-common/pure-common-web/pom.xml
@@ -16,6 +16,10 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.xie</groupId>
+            <artifactId>pure-common-core</artifactId>
+        </dependency>
         <!-- SpringBoot Web容器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
