--- a/pure-admin/src/main/resources/application.yml
+++ b/pure-admin/src/main/resources/application.yml
@@ -26,6 +26,12 @@ spring:
       # 允许对象忽略json中不存在的属性
       fail_on_unknown_properties: false
 
+--- # 分布式锁 lock4j 全局配置
+lock4j:
+  # 获取分布式锁超时时间，默认为 3000 毫秒
+  acquire-timeout: 3000
+  # 分布式锁的超时时间，默认为 30 秒
+  expire: 30000
 
 # MyBatisPlus配置
 # https://baomidou.com/config/
