三方登录优化

--- a/pure-common/pure-common-social/pom.xml
+++ b/pure-common/pure-common-social/pom.xml
@@ -24,5 +24,10 @@
             <groupId>com.xie</groupId>
             <artifactId>pure-common-redis</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.xie</groupId>
+            <artifactId>pure-common-json</artifactId>
+        </dependency>
     </dependencies>
 </project>
