--- a/pure-admin/src/main/resources/application-dev.yml
+++ b/pure-admin/src/main/resources/application-dev.yml
@@ -67,8 +67,16 @@ redisson:
 --- # 三方授权
 justauth:
   enabled: true
-  address: http://localhost:3000
+  # 前端外网访问地址
+  address: http://localhost:80
   type:
+    maxkey:
+      # maxkey 服务器地址
+      # 注意 如下均配置均不需要修改 maxkey 已经内置好了数据
+      server-url: http://sso.maxkey.top
+      client-id: 876892492581044224
+      client-secret: x1Y5MTMwNzIwMjMxNTM4NDc3Mzche8
+      redirect-uri: ${justauth.address}/social-callback?source=maxkey
     qq:
       client-id: 10**********6
       client-secret: 1f7d08**********5b7**********29e
