--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <lombok.version>1.18.26</lombok.version>
         <satoken.version>1.35.0.RC</satoken.version>
         <spring-boot.mybatis>3.0.1</spring-boot.mybatis>
+        <springdoc.version>2.1.0</springdoc.version>
+        <therapi-javadoc.version>0.15.0</therapi-javadoc.version>
         <hutool.version>5.8.18</hutool.version>
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <okhttp.version>4.10.0</okhttp.version>
@@ -140,6 +142,18 @@
             </dependency>
 
             <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.therapi</groupId>
+                <artifactId>therapi-runtime-javadoc</artifactId>
+                <version>${therapi-javadoc.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
@@ -204,6 +218,11 @@
                     <target>${java.version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.github.therapi</groupId>
+                            <artifactId>therapi-runtime-javadoc-scribe</artifactId>
+                            <version>${therapi-javadoc.version}</version>
+                        </path>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
