--- a/pure-common/pom.xml
+++ b/pure-common/pom.xml
@@ -30,5 +30,6 @@
         <module>pure-common-redis</module>
         <module>pure-common-excel</module>
         <module>pure-common-encrypt</module>
+        <module>pure-common-oss</module>
     </modules>
 </project>
