--- a/pure-common/pom.xml
+++ b/pure-common/pom.xml
@@ -31,5 +31,6 @@
         <module>pure-common-excel</module>
         <module>pure-common-encrypt</module>
         <module>pure-common-oss</module>
+        <module>pure-common-log</module>
     </modules>
 </project>
