--- a/pure-common/pure-common-bom/pom.xml
+++ b/pure-common/pure-common-bom/pom.xml
@@ -94,6 +94,11 @@
                 <artifactId>pure-common-mail</artifactId>
                 <version>${revision}</version>
             </dependency>
+            <dependency>
+                <groupId>com.xie</groupId>
+                <artifactId>pure-common-websocket</artifactId>
+                <version>${revision}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
